--- a/projet/html/Untitled-1.html
+++ b/projet/html/Untitled-1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/cssindex.css" />
+    <link rel="stylesheet" href="/css/index.css" />
     
     <title>emcome</title>
 </head>
@@ -61,7 +61,7 @@
                 <img class="ft3" src="/img/corte (3).jpeg" alt="cort3">
             </div>
         </div>
-        <div class="descriçõ">
+        <div class="descriço">
             <div class="desc1">
                 <p><h2>Degrade</h2></p>
                 <p>O corte de cabelo degradê, também conhecido como fade, é um estilo popular que apresenta uma transição suave do cabelo curto para o longo.</p>
@@ -119,7 +119,7 @@
         </div>
         <div class="sobracelha">
             <div class="imgsobra1">
-                <img src="/img/sobracelha1.jpg" alt="sobracelho1">
+                <img  src="/img/sobracelha1.jpg" alt="sobracelho1">
             </div>
             <div class="imgsobra2">
                 <img src="/img/sobracelha2.jpg" alt="sobracelho2">
@@ -162,16 +162,25 @@
         </div>
         <div class="totalcolab">
             <div class="colab1">
-                <img src="" alt="fotocolab">
-                <p>especialidade</p>
+                <img src="img/colabe1.jpg" alt="fotocolab">
+                <div class="text1">
+                    <h4>nome</h4>
+                    <p>descrição</p>
+                </div>
             </div>
             <div class="colab2">
-                <img src="" alt="fotocolab">
-                <p>especialidade</p>
+                <img src="img/colabe2.jpg" alt="fotocolab">
+                <div class="text1">
+                    <h4>nome</h4>
+                    <p>descrição</p>
+                </div>
             </div>
-            <div class="colab3">
-                <img src="" alt="fotocolab">
-                <p>especialidade</p>
+            <div class="colab2">
+                <img src="img/colab3.webp" alt="fotocolab">
+                <div class="text1">
+                    <h4>nome</h4>
+                    <p>descrição</p>
+                </div>
             </div>
         </div>
     </nav>
@@ -186,33 +195,90 @@
                         CheckCut
                     </h2>
                 </div>
+                <div class="buttonfim">
+                    <button>login</button>
+                </div>
+                <div class="buttonfim">
+                    <button>cadastra</button>
+                </div>
             </div>
-            <div class="topc">
-                <div class="">
-                    <h3>
-                        Topicos
-                    </h3>
+                <div class="topctotal">
+                    <div class="topc">
+                        <div class="">
+                            <h3>
+                                Topicos
+                            </h3>
+                        </div>
+                        <div class="top1">
+                            <a class="atopc1"href="www.google.com.br">Google</a>
+                        </div>
+                        <div class="top1">
+                            <a class="atopc1" href="www.google.com.br">Google</a>
+                        </div>
+                        <div class="top1">
+                            <a class="atopc1" href="www.google.com.br">Google</a>
+                        </div>
+                        <div class="top1">
+                            <a class="atopc1" href="www.google.com.br">Google</a>
+                        </div>
+                        <div class="top1">
+                            <a class="atopc1" href="www.google.com.br">Google</a>
+                        </div>
+                        <div class="top1">
+                            <a class="atopc1" href="www.google.com.br">Google</a>
+                        </div>
+                    </div>
+                    <div class="topc">
+                        <div class="">
+                            <h3>
+                                Topicos
+                            </h3>
+                        </div>
+                        <div class="top1">
+                            <a class="atopc1" href="www.google.com.br">Google</a>
+                        </div>
+                        <div class="top1">
+                            <a class="atopc1" href="www.google.com.br">Google</a>
+                        </div>
+                        <div class="top1">
+                            <a class="atopc1" href="www.google.com.br">Google</a>
+                        </div>
+                        <div class="top1">
+                            <a class="atopc1" href="www.google.com.br">Google</a>
+                        </div>
+                        <div class="top1">
+                            <a class="atopc1" href="www.google.com.br">Google</a>
+                        </div>
+                        <div class="top1">
+                            <a class="atopc1" href="www.google.com.br">Google</a>
+                        </div>
+                    </div>
+                    <div class="topc">
+                        <div class="">
+                            <h3>
+                                Topicos
+                            </h3>
+                        </div>
+                        <div class="top1">
+                            <a class="atopc1" href="www.google.com.br">Google</a>
+                        </div>
+                        <div class="top1">
+                            <a class="atopc1" href="www.google.com.br">Google</a>
+                        </div>
+                        <div class="top1">
+                            <a class="atopc1" href="www.google.com.br">Google</a>
+                        </div>
+                        <div class="top1">
+                            <a class="atopc1" href="www.google.com.br">Google</a>
+                        </div>
+                        <div class="top1">
+                            <a class="atopc1" href="www.google.com.br">Google</a>
+                        </div>
+                        <div class="top1">
+                            <a class="atopc1" href="www.google.com.br">Google</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="top1">
-                    <a href="www.google.com.br">Google</a>
-                </div>
-                <div class="top1">
-                    <a href="www.google.com.br">Google</a>
-                </div>
-                <div class="top1">
-                    <a href="www.google.com.br">Google</a>
-                </div>
-                <div class="top1">
-                    <a href="www.google.com.br">Google</a>
-                </div>
-                <div class="top1">
-                    <a href="www.google.com.br">Google</a>
-                </div>
-                <div class="top1">
-                    <a href="www.google.com.br">Google</a>
-                </div>
-
-            </div>
         </div>
         <div class="redes">
             <div class="youtube">
@@ -237,8 +303,5 @@
             </div>
         </div>
     </footer>
-
-
-
 </body>
 </html>
