--- a/projet/html/index.html
+++ b/projet/html/index.html
@@ -162,21 +162,21 @@
         </div>
         <div class="totalcolab">
             <div class="colab1">
-                <img src="img/colabe1.jpg" alt="fotocolab">
+                <img src="/img/colabe1.jpg" alt="fotocolab">
                 <div class="text1">
                     <h4>nome</h4>
                     <p>descrição</p>
                 </div>
             </div>
             <div class="colab2">
-                <img src="img/colabe2.jpg" alt="fotocolab">
+                <img src="/img/colabe2.jpg" alt="fotocolab">
                 <div class="text1">
                     <h4>nome</h4>
                     <p>descrição</p>
                 </div>
             </div>
             <div class="colab2">
-                <img src="img/colab3.webp" alt="fotocolab">
+                <img src="/img/colab3.webp" alt="fotocolab">
                 <div class="text1">
                     <h4>nome</h4>
                     <p>descrição</p>
