--- a/projet/html/cadastra.html
+++ b/projet/html/cadastra.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/index.css" />
-    
-    <title>CheckCut</title>
+    <link rel="stylesheet" href="/css/cadastrar.css">
+    <title>Document</title>
 </head>
 <body>
     <header>
         <div class="topo">
             <div id="imglogo" >
-                <a href="/html/index.html"><img class="ing" src="/img/logo-removebg-preview.png" alt="logo"></a>
+                <a href="/html/index.html">
+                    <img class="ing" src="/img/logo-removebg-preview.png" alt="logo"></a>
             </div>
             <div class="infor">
                 <div class="login">
@@ -26,162 +26,73 @@
             </div>
         </div>
     </header>
-    <nav class="bloco">
-        <div class="titlenav">
-            <p>
-                <h2>
-                    Agende imediatamente
-                </h2>
-            </p>
-        </div>
-        <div class="descrition">
-            <p>
-                Este site é uma plataforma para agendamento de horários na barbearia, onde os clientes podem reservar serviços facilmente online. Oferece uma interface intuitiva e informações detalhadas sobre os serviços disponíveis.
-            </p>
-        </div>
-        <div class="buttonsab">
-            <button class="saiba">Saiba mais</button>
-        </div>
-    </nav>
-    <nav class="imgtop">
-        <img class="imginicio" src="/img/imgcara.jpeg">
-    </nav>
-    <nav class="twotitle">
-        <h1 class="titlet2">
-            Cortes 
-        </h1>
-        <div class="imgCortes">
-            <div class="c1">
-                <img class="ft1" src="/img/corte (1).jpeg" alt="cort1">
-            </div>
-            <div class="c2">
-                <img class="ft2" src="/img/corte (2).jpeg" alt="cort2">
-            </div>
-            <div class="c3">
-                <img class="ft3" src="/img/corte (3).jpeg" alt="cort3">
-            </div>
-        </div>
-        <div class="descriço">
-            <div class="desc1">
-                <p><h2>Degrade</h2></p>
-                <p>O corte de cabelo degradê, também conhecido como fade, é um estilo popular que apresenta uma transição suave do cabelo curto para o longo.</p>
-            </div>
-            <div class="desc2">
-                <p><h2>Degrade</h2></p>
-                <p>O corte de cabelo degradê, também conhecido como fade, é um estilo popular que apresenta uma transição suave do cabelo curto para o longo.</p>
-            </div>
-            <div class="desc3">
-                <p><h2>Degrade</h2></p>
-                <p>O corte de cabelo degradê, também conhecido como fade, é um estilo popular que apresenta uma transição suave do cabelo curto para o longo.  </p>
-            </div>
-        </div>
-    </nav>
-    <section>
-        <div class="total">
-            <div class="totaltex">
-                <div class="titulo">
-                    <h1>Quimicos</h1>
-                </div>
-                <div class="descrition">
-                    <div class="drescrip1">
-                        <h3>Progreciva</h3>
-                        <p>O corte de cabelo degradê, também conhecido como fade, é um estilo popular que apresenta uma transição suave do cabelo curto para o longo.</p>
-                    </div>
-                    <div class="drescrip2">
-                        <h3>Progreciva</h3>
-                        <p>O corte de cabelo degradê, também conhecido como fade, é um estilo popular que apresenta uma transição suave do cabelo curto para o longo.</p>
-                    </div>
-                    <div class="drescrip3">
-                        <h3>Progreciva</h3>
-                        <p>O corte de cabelo degradê, também conhecido como fade, é um estilo popular que apresenta uma transição suave do cabelo curto para o longo.</p>
-                    </div>
-                </div>
-                <div class="Buttons">
-                    <button>
-                        Buton
-                    </button>
-                    <button>
-                        Buton
-                    </button>
-                </div>
-            </div>
-            <div class="imglado">
-                <img src="/img/luzes (1).jpeg" alt="luzes">
-            </div>
-        </div>
-    </section>
-
-    <nav class="problematica">
-        <div class="tituloProcedimentos">
+    <nav class="Oinicio">
+        <div class="titutlo1">
             <h1>
-                Procedimentos
+                Cadastro
             </h1>
         </div>
-        <div class="sobracelha">
-            <div class="imgsobra1">
-                <img  src="/img/sobracelha1.jpg" alt="sobracelho1">
+        <div class="subtitle">
+            <h4>
+                Informações pessoais
+            </h4>
+        </div>
+        <div class="dodisplay">
+            <div class="infreferent">
+                <p>
+                    As informações pessoais são cruciais em um cadastro de usuário porque garantem a 
+                    autenticidade e segurança do acesso à plataforma. Elas permitem identificar e 
+                    distinguir cada usuário, prevenindo fraudes e acessos não autorizados. Além disso, 
+                    informações corretas facilitam a comunicação eficiente entre o serviço e o 
+                    usuário, oferecendo suporte adequado e personalizado. Dados precisos também 
+                    ajudam na recuperação de contas e na prestação de serviços de forma segura e eficaz. 
+                    Em síntese, proteger essas informações é vital para manter a integridade e a 
+                    confiabilidade do sistema.
+                </p>
             </div>
-            <div class="imgsobra2">
-                <img src="/img/sobracelha2.jpg" alt="sobracelho2">
+            <div class="imgdapagina">
+                <img src="/img/corte (1).jpeg" alt="imagem referencia">
             </div>
         </div>
-        <div class="divtext">
-            <div class="divtext1">
-                <h3>Limpesa de Rosto</h3>
-                <p>O corte de cabelo degradê, também conhecido como fade, é um estilo popular que </br> apresenta uma transição suave do cabelo curto para o longo.</p>
-            </div>
-            <div class="divtext2">
-                <h3>Sobrancelha</h3>
-                <p>O corte de cabelo degradê, também conhecido como fade, é um estilo popular que </br> apresenta uma transição suave do cabelo curto para o longo.</p>
-            </div>
-        </div>
-
     </nav>
-    <nav class="barbeiros">
-        <div class="titulocolabo">
-            <h1>
-                Colaboradores
-            </h1>
+    <nav class="imputs">
+        <div class="tituloimp">
+            <h1>Login</h1>
         </div>
-        <div class="colaborado">
-            <div class="colaborador1">
-                <h3>
-                    gerente 
-                </h3>
+        <div class="imp1">
+            <div class="imputes">
+                <h4>Name</h4>
+                <input type="text" value="" >
             </div>
-            <div class="colaborador2">
-                <h3>
-                    barbeiro  
-                </h3>
-            </div>
-            <div class="colaborador3">
-                <h3>
-                    barbeiro 
-                </h3>
+            <div class="imputes">
+                <h4>Email</h4>
+                <input type="email" value="" >
             </div>
         </div>
-        <div class="totalcolab">
-            <div class="colab1">
-                <img src="/img/colabe1.jpg" alt="fotocolab">
-                <div class="text1">
-                    <h4>nome</h4>
-                    <p>descrição</p>
-                </div>
+        <div class="imp1">
+            <div class="imputes">
+                <h4>number phone</h4>
+                <input type="tel" value="" >
             </div>
-            <div class="colab2">
-                <img src="/img/colabe2.jpg" alt="fotocolab">
-                <div class="text1">
-                    <h4>nome</h4>
-                    <p>descrição</p>
-                </div>
+            <div class="imputes">
+                <h4>CPF</h4>
+                <input type="number" value="" >
             </div>
-            <div class="colab2">
-                <img src="/img/colab3.webp" alt="fotocolab">
-                <div class="text1">
-                    <h4>nome</h4>
-                    <p>descrição</p>
-                </div>
+        </div>
+        <div class="imp1">
+            <div class="imputes">
+                <h4>Password</h4>
+                <input class="imppw" type="password" value="" >
             </div>
+            <div class="imputes">
+                <h4>confirme Password</h4>
+                <input type="password" value="" >
+            </div>
+        </div>
+        <div class="buttoncadastra">
+            <button>
+                Cadastra
+            </button>
         </div>
     </nav>
     <footer>
