--- a/projet/html/index.html
+++ b/projet/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="/css/index.css" /> 
     
     <title>CheckCut</title>
 </head>
@@ -15,13 +15,13 @@
             </div>
             <div class="infor">
                 <div class="login">
-                    <p><button>Login</button></p>
+                    <a href=""><button >Login</button></a>
                 </div>
                 <div class="cadastrece">
-                    <p><button>cadastrece</button></p>
+                    <a href="/html/cadastra.html"><button>cadastrece</button></a>
                 </div>
                 <div class="contato">
-                    <p><button>Contatinos</button></p>
+                    <a href=""><button>Contatinos</button></a>
                 </div>
             </div>
         </div>
