--- a/projet/html/index.html
+++ b/projet/html/index.html
@@ -199,7 +199,7 @@
                     <button>login</button>
                 </div>
                 <div class="buttonfim">
-                    <button>cadastra</button>
+                    <a href="/html/cadastra.html"><button>cadastrece</button></a>
                 </div>
             </div>
                 <div class="topctotal">
