--- a/projet/html/login.html
+++ b/projet/html/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/cadastrar.css">
+    <link rel="stylesheet" href="/css/login.css">
     <title>Document</title>
 </head>
 <body>
@@ -15,87 +15,48 @@
             </div>
             <div class="infor">
                 <div class="login">
-                    <p><button>Login</button></p>
+                    <p><button>pagina inicial</button></p>
                 </div>
                 <div class="cadastrece">
-                    <p><button>cadastrece</button></p>
+                    <p><button>informações</button></p>
                 </div>
                 <div class="contato">
-                    <p><button>Contatinos</button></p>
+                    <p><button>Contatos</button></p>
                 </div>
             </div>
         </div>
     </header>
-    <nav class="body">
-        <nav class="Oinicio">
-            <div class="titutlo1">
-                <h1>
-                    Cadastro
-                </h1>
-            </div>
-            <div class="subtitle">
-                <h4>
-                    Informações pessoais
-                </h4>
-            </div>
-            <div class="dodisplay">
-                <div class="infreferent">
-                    <p>
-                        As informações pessoais são cruciais em um cadastro de usuário porque garantem a 
-                        autenticidade e segurança do acesso à plataforma. Elas permitem identificar e 
-                        distinguir cada usuário, prevenindo fraudes e acessos não autorizados. Além disso, 
-                        informações corretas facilitam a comunicação eficiente entre o serviço e o 
-                        usuário, oferecendo suporte adequado e personalizado. Dados precisos também 
-                        ajudam na recuperação de contas e na prestação de serviços de forma segura e eficaz. 
-                        Em síntese, proteger essas informações é vital para manter a integridade e a 
-                        confiabilidade do sistema.
-                    </p>
-                </div>
-                <div class="imgdapagina">
-                    <img src="/img/corte (1).jpeg" alt="imagem referencia">
-                </div>
-            </div>
-        </nav>
         <nav class="imputs">
-            <form action="">
+            <form action="log">
                 <div class="tituloimp">
                     <h1>Login</h1>
                 </div>
-                <div class="imp1">
-                    <div class="imputes">
-                        <h4>Nome</h4>
-                        <input type="text" placeholder="Nome" >
-                    </div>
                     <div class="imputes">
                         <h4>Email</h4>
                         <input type="email" placeholder="Email" >
                     </div>
                 </div>
-                <div class="imp1">
-                    <div class="imputes">
-                        <h4>Numero de telefone</h4>
-                        <input type="tel" placeholder="Numero de telefone" >
-                    </div>
-                    <div class="imputes">
-                        <h4>CPF</h4>
-                        <input type="number" placeholder="CPF" >
-                    </div>
+                <div class="imputes">
+                    <h4>Senha</h4>
+                    <input class="imppw" type="password" placeholder="Senha" >
                 </div>
-                <div class="imp1">
-                    <div class="imputes">
-                        <h4>Senha</h4>
-                        <input class="imppw" type="password" placeholder="Senha" >
-                    </div>
-                    <div class="imputes">
-                        <h4>confirme Senha</h4>
-                        <input type="password" placeholder="Confirme a senha" >
-                    </div>
-                </div>
-                <div class="buttoncadastra">
+                <div>
+                <div class="buttonlogin">
                     <button type="submit">
-                        Cadastra
+                        logar
                     </button>
                 </div>
+                <div class="buttonesqueci">
+                    <button >
+                        Esqueci minha cenha
+                    </button>
+                </div>
+                <div class="buttoncadastrar">
+                    <button >
+                        cadastrar
+                    </button>
+                </div>
+            </div>
             </form>
         </nav>
         <footer>
@@ -110,10 +71,10 @@
                         </h2>
                     </div>
                     <div class="buttonfim">
-                        <button>login</button>
+                        <button type="button">login</button>
                     </div>
                     <div class="buttonfim">
-                        <button>cadastra</button>
+                        <button type="button">cadastra</button>
                     </div>
                 </div>
                     <div class="topctotal">
