--- a/projet/html/login.html
+++ b/projet/html/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/login.css">
+    
     <title>Document</title>
 </head>
 <body>
@@ -27,37 +28,41 @@
         </div>
     </header>
         <nav class="imputs">
-            <form action="log">
-                <div class="tituloimp">
-                    <h1>Login</h1>
-                </div>
-                    <div class="imputes">
-                        <h4>Email</h4>
-                        <input type="email" placeholder="Email" >
+            <div class="back">
+                <form action="log">
+                    <div class="tituloimp">
+                        <h1>Login</h1>
                     </div>
-                </div>
-                <div class="imputes">
-                    <h4>Senha</h4>
-                    <input class="imppw" type="password" placeholder="Senha" >
-                </div>
-                <div>
-                <div class="buttonlogin">
-                    <button type="submit">
-                        logar
-                    </button>
-                </div>
-                <div class="buttonesqueci">
-                    <button >
-                        Esqueci minha cenha
-                    </button>
-                </div>
-                <div class="buttoncadastrar">
-                    <button >
-                        cadastrar
-                    </button>
-                </div>
-            </div>
-            </form>
+                        <div class="imputes">
+                            <h4>Email</h4>
+                            <input id="email" name="email" type="email" onchange="onChangeEmail()" placeholder="seu@email.com" >
+                            <div class="erro" id="email-required-error">Email obrigatorio!</div>
+                            <div class="erro" id="email-invalid-error">Email invalido!</div>
+                        </div>
+                    <div class="imputes">
+                        <h4>Senha</h4>
+                        <input id="password" name="senha" class="imppw" type="password" placeholder="Senha" onchange="onChangePassword()" >
+                        <div class="erro" id="password-required-error">Senha obrigatoria</div>
+                    </div>
+                    <div>
+                        <div class="buttonlogin">
+                            <button id="login-button" type="button"  disabled="true">
+                                Entrar
+                            </button>
+                        </div>
+                        <div class="buttonesqueci" >
+                            <button type="button" id="recover-password-button" disabled="true" >
+                                Esqueci minha cenha
+                            </button>
+                        </div>
+                        <div class="buttoncadastrar">
+                            <button type="button"class="outline">
+                                cadastrar
+                            </button>
+                        </div>
+                    </div>
+                </form>
+         </div>
         </nav>
         <footer>
             <div class="totalfim">
@@ -71,10 +76,10 @@
                         </h2>
                     </div>
                     <div class="buttonfim">
-                        <button type="button">login</button>
+                        <button type="button" disabled="true">login</button>
                     </div>
                     <div class="buttonfim">
-                        <button type="button">cadastra</button>
+                        <button type="button"  disabled="true">cadastra</button>
                     </div>
                 </div>
                     <div class="topctotal">
@@ -180,4 +185,6 @@
         </footer>
     </nav>
 </body>
+
+<script src="/js/login.js"></script>
 </html>
