--- a/projet/register/cadastra.html
+++ b/projet/register/cadastra.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/cadastrar.css">
-    <title>Document</title>
+    <title>cadastra</title>
 </head>
 <body>
     <header>
@@ -57,46 +57,48 @@
             </div>
         </nav>
         <nav class="imputs">
-            <form action="">
-                <div class="tituloimp">
-                    <h1>Login</h1>
-                </div>
-                <div class="imp1">
-                    <div class="imputes">
-                        <h4>Nome</h4>
-                        <input type="text" placeholder="Nome" >
+            <div class="back">
+                <form class="register">
+                    <div class="tituloimp">
+                        <h1>Login</h1>
                     </div>
-                    <div class="imputes">
-                        <h4>Email</h4>
-                        <input type="email" placeholder="Email" >
+                    <div class="imp1">
+                        <div class="imputes">
+                            <h4>Nome</h4>
+                            <input type="text" placeholder="Nome" >
+                        </div>
+                        <div class="imputes">
+                            <h4>Email</h4>
+                            <input type="email" placeholder="Email" >
+                        </div>
                     </div>
-                </div>
-                <div class="imp1">
-                    <div class="imputes">
-                        <h4>Numero de telefone</h4>
-                        <input type="tel" placeholder="Numero de telefone" >
+                    <div class="imp1">
+                        <div class="imputes">
+                            <h4>Numero de telefone</h4>
+                            <input type="tel" placeholder="Numero de telefone" >
+                        </div>
+                        <div class="imputes">
+                            <h4>CPF</h4>
+                            <input type="number" placeholder="CPF" >
+                        </div>
                     </div>
-                    <div class="imputes">
-                        <h4>CPF</h4>
-                        <input type="number" placeholder="CPF" >
+                    <div class="imp1">
+                        <div class="imputes">
+                            <h4>Senha</h4>
+                            <input class="imppw" type="password" placeholder="Senha" >
+                        </div>
+                        <div class="imputes">
+                            <h4>confirme Senha</h4>
+                            <input type="password" placeholder="Confirme a senha" >
+                        </div>
                     </div>
-                </div>
-                <div class="imp1">
-                    <div class="imputes">
-                        <h4>Senha</h4>
-                        <input class="imppw" type="password" placeholder="Senha" >
+                    <div class="buttoncadastra">
+                        <button type="button">
+                            Cadastra
+                        </button>
                     </div>
-                    <div class="imputes">
-                        <h4>confirme Senha</h4>
-                        <input type="password" placeholder="Confirme a senha" >
-                    </div>
-                </div>
-                <div class="buttoncadastra">
-                    <button type="submit">
-                        Cadastra
-                    </button>
-                </div>
-            </form>
+                </form>
+            </div>
         </nav>
         <footer>
             <div class="totalfim">
