--- a/projet/index/index.html
+++ b/projet/index/index.html
@@ -11,14 +11,14 @@
     <header>
         <div class="topo">
             <div id="imglogo" >
-                <a href="/html/index.html"><img class="ing" src="/img/logo-removebg-preview.png" alt="logo"></a>
+                <a href="/index/index.html"><img class="ing" src="/img/logo-removebg-preview.png" alt="logo"></a>
             </div>
             <div class="infor">
                 <div class="login">
-                    <a href=""><button >Login</button></a>
+                    <button type="button" onclick="gologin()">Login</button>
                 </div>
                 <div class="cadastrece">
-                    <a href="/html/cadastra.html"><button>cadastrece</button></a>
+                    <button type="button" onclick="goregister()">cadastrece</button>
                 </div>
                 <div class="contato">
                     <a href=""><button>Contatinos</button></a>
@@ -188,7 +188,7 @@
         <div class="totalfim">
             <div class="fimsite">
                 <div class="namesite">
-                   <a href="/html/index.html">
+                   <a href="/index/index.html">
                         <img src="/img/logo-removebg-preview.png" alt="">
                     </a>
                     <h2>
@@ -196,10 +196,10 @@
                     </h2>
                 </div>
                 <div class="buttonfim">
-                    <button>login</button>
+                    <button type="button" onclick="gologin()">login</button>
                 </div>
                 <div class="buttonfim">
-                    <a href="/html/cadastra.html"><button>cadastrece</button></a>
+                    <button type="button" onclick="goregister()">cadastrece</button>
                 </div>
             </div>
                 <div class="topctotal">
@@ -304,4 +304,6 @@
         </div>
     </footer>
 </body>
+<script src="/index/index.js"></script>
+<script src="/js/validations.js"></script>
 </html>
