--- a/projet/index/index.html
+++ b/projet/index/index.html
@@ -304,6 +304,10 @@
         </div>
     </footer>
 </body>
+ <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-auth-compat.js"></script>
 <script src="/index/index.js"></script>
-<script src="/js/validations.js"></script>
+<script src="../validations.js"></script>
+<script src="../firebase-init.js"></script>
+<script src="../js/go.js"></script>
 </html>
