--- a/projet/home/home.html
+++ b/projet/home/home.html
@@ -8,5 +8,6 @@
 <body>
     home
 </body>
-<script src="/js/validations.js"></script>
+<script src="../js/validations.js"></script>
+<script src="../js/go.js"></script>
 </html>
