--- a/projet/login/login.html
+++ b/projet/login/login.html
@@ -16,10 +16,10 @@
             </div>
             <div class="infor">
                 <div class="login">
-                    <p><button >pagina inicial</button></p>
+                    <p><button onclick="goIndex()">pagina inicial</button></p>
                 </div>
                 <div class="cadastrece">
-                    <p><button>informações</button></p>
+                    <p><button onclick="">informações</button></p>
                 </div>
                 <div class="contato">
                     <p><button>Contatos</button></p>
@@ -192,20 +192,11 @@
 
   <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-auth-compat.js"></script>
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyDi8lLBDNVTf7XWHV3gZwlAf6Tu1FBqcUI",
-      authDomain: "gerenciamento-de-horarios.firebaseapp.com",
-      projectId: "gerenciamento-de-horarios",
-      storageBucket: "gerenciamento-de-horarios.firebasestorage.app",
-      messagingSenderId: "256628662222",
-      appId: "1:256628662222:web:ce43f921f75a1768f1959f"
-    };
-    firebase.initializeApp(firebaseConfig);
-  </script>
-
-
-<script src="/js/loading.js"></script>
+  <script src="../js/firebase-init.js"></script>
+  
+<script src="/js/loading.js" ></script>
 <script src="/login/login.js"></script>
-<script src="/js/validations.js"></script>
+<script src="../js/validations.js" ></script>
+<script src="../js/go.js"></script>
+
 </html>
