--- a/projet/home/home.html
+++ b/projet/home/home.html
@@ -4,10 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agendamento</title>
+    <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    home
+    <header>
+        <div class="topo">
+            <div id="imglogo" >
+                <a href="/html/index.html">
+                    <img class="ing" src="/img/logo-removebg-preview.png" alt="logo"></a>
+            </div>
+            <div class="infor">
+                <div class="login">
+                    <p><button onclick="gologin()">Login</button></p>
+                </div>
+                <div class="cadastrece">
+                    <p><button>cadastrece</button></p>
+                </div>
+                <div class="contato">
+                    <p><button type="button" onclick="logout()">Sair</button></p>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
+
+
+<script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-auth-compat.js"></script>
+
+<script src="../js/firebase-init.js"></script>
+
+<script src="../js/auth-guard.js"></script>
+<script src="home.js"></script>
 <script src="../js/validations.js"></script>
-<script src="../js/go.js"></script>
+<script src="../js/ go.js"></script>
+
+
 </html>
